<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Logistic System</string>
    <string name="header_login">Login</string>
    <string name="header_register">Register</string>
    <string name="header_user_profile">User Profile</string>
    <string name="header_edit_profile">Edit Profile</string>
    <string name="header_new_shipment">New Shipment</string>
    <string name="header_choose_destination">Choose Destination</string>
    <string name="header_choose_departure">Choose Departure</string>
    <string name="header_choose_receive_time">Choose Receive Time</string>
    <string name="header_my_shipments">My Shipments</string>
    <string name="header_shipment_info">Shipment Information</string>
    <string name="header_edit_shipment">Edit Shipments</string>
    <string name="header_goods_info">Goods Information</string>
    <string name="header_customer_service">Customer Service</string>
    <string name="action_settings">Settings</string>

    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="about">About As</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <string name="format">[a-zA-Z_0-9]+</string>
    <string name="format_email">^("[^"]+?"|[\da-z]|[\da-z](\.?[\w\$\*\+\-\/\?\^\{\|\}!#%&amp;'=`~]+)*[\da-z])@(\[((0|[1-9]\d?|1\d\d|2[0-4]\d|25[0-5])\.){3}(0|[1-9]\d?|1\d\d|2[0-4]\d|25[0-5])\]|(([\da-z]|[\da-z][\w\-]*[\da-z])\.)+[\da-z]{2,24})$</string>
    <string name="format_phone">^(\\+852-\\d{8}|\\+(?!852-)\\d{2,4}-\\d{0,11})$</string>

    <string name="hit_username">username</string>
    <string name="hit_password">password</string>
    <string name="hit_address1">Apartment, Floor no., Building Name</string>
    <string name="hit_address2">House Name, Street Name</string>
    <string name="hit_address3">Locality</string>

    <string name="user_licence_agreement"><u>USER_LICENCE_AGREEMENT</u></string>

    <string name="label_login_for_more_function">Login For More Function</string>
    <string name="label_new_shipment">New Shipment</string>
    <string name="label_my_shipments">My Shipments</string>
    <string name="label_user_profile">User Profile</string>
    <string name="label_i_accept">I Accept\u00A0</string>
    <string name="label_id">ID :\u00A0</string>
    <string name="label_user_id">User ID :\u00A0</string>
    <string name="label_username">Username :\u00A0</string>
    <string name="label_address">Address :\u00A0</string>
    <string name="label_email">Email :\u00A0</string>
    <string name="label_phone">Phone :\u00A0</string>
    <string name="label_real_name">Real Name :\u00A0</string>
    <string name="label_confirm_password">Confirm Password :\u00A0</string>
    <string name="label_password">Password :\u00A0</string>
    <string name="label_new_password">New Password :\u00A0</string>
    <string name="label_register_time">Register Time :\u00A0</string>
    <string name="label_last_modify_time">Last Modify Time :\u00A0</string>
    <string name="label_sender">Sender :\u00A0</string>
    <string name="label_receiver">Receiver :\u00A0</string>
    <string name="label_departure">Departure :\u00A0</string>
    <string name="label_destination">Destination :\u00A0</string>
    <string name="label_quantity_of_goods">Quantity of Goods :\u00A0</string>
    <string name="label_order_state">Order State:\u00A0</string>
    <string name="label_order_time">Order Time:\u00A0</string>
    <string name="label_goods">Goods</string>
    <string name="label_expand">Expand</string>
    <string name="label_weight">Weight :\u00A0</string>
    <string name="label_fragile">Fragile :\u00A0</string>
    <string name="label_flammable">Flammable :\u00A0</string>
    <string name="label_location">Location :\u00A0</string>
    <string name="label_update_time">Update Time :\u00A0</string>
    <string name="label_new_shipment_info">New Shipment Information</string>
    <string name="label_receiver_real_name">Receiver Real Name :\u00A0</string>
    <string name="label_receiver_phone">Receiver Phone :\u00A0</string>
    <string name="label_receiver_email">Receiver Email :\u00A0</string>
    <string name="label_receiver_address">Receiver Address :\u00A0</string>

    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_edit_user">Edit User</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_register">Register</string>
    <string name="btn_find_user">Find User</string>
    <string name="btn_next">Next</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_choose_shop">Choose Shop</string>

    <string name="chBx_save_me">Save Me</string>

</resources>
