<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/lay_background"
              android:orientation="vertical"
              android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/label_login_for_more_function"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edTxtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:maxLength="20"
        android:hint="@string/hit_username"
        android:inputType="text">

        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/edTxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:maxLength="20"
        android:hint="@string/hit_password"
        android:inputType="textPassword"/>

    <CheckBox
        android:id="@+id/chBxSaveMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="#ffffff"
        android:paddingRight="10dp"
        android:text="@string/chBx_save_me"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/button"
        android:text="@string/btn_login"
        android:textColor="#ffffff"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/button"
        android:text="@string/btn_register"
        android:textColor="#ffffff"
        android:textSize="20sp"/>

</LinearLayout>