<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#e6e6e6"
             android:layout_margin="3dp"
             android:padding="5dp">

    <TableRow
        android:layout_margin="3dp"
        android:background="@drawable/table_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_id"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txtViewOrderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>
    </TableRow>

    <TableRow
        android:layout_margin="3dp"
        android:background="@drawable/table_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sender"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txtViewSender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>
    </TableRow>

    <TableRow
        android:layout_margin="3dp"
        android:background="@drawable/table_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_receiver"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txtViewReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRowDeparture"
        android:layout_margin="3dp"
        android:background="@drawable/table_row">

        <LinearLayout android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_departure"
                android:textSize="16sp"/>

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/edit_icon"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txtViewDeparture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRowDestination"
        android:layout_margin="3dp"
        android:background="@drawable/table_row">

        <LinearLayout android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_destination"
                android:textSize="16sp"/>

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/edit_icon"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txtViewDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

    </TableRow>

    <TableRow
        android:layout_margin="3dp"
        android:background="@drawable/table_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_quantity_of_goods"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edTxtNumberOfGoods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textSize="16sp"/>
    </TableRow>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:textColor="@color/primary_dark_material_light"
        android:text="* Only Departure, Destination and Quantity of Goods can be edit."/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_margin="5dp"
        android:textColor="#fff"
        android:text="@string/btn_submit"/>

</TableLayout>