<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/laySwipe"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e6e6e6"
            android:layout_margin="3dp"
            android:padding="5dp">

            <TableRow
                android:background="@drawable/table_row"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_id"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtViewOrderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:background="@drawable/table_row"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sender"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtViewSender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:background="@drawable/table_row"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_receiver"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtViewReceiver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:background="@drawable/table_row"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_departure"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtViewDeparture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:background="@drawable/table_row"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_destination"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtViewDestination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:background="@drawable/table_row"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_quantity_of_goods"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtViewNumberOfGoods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:background="@drawable/table_row"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_order_state"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtViewOrderState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:background="@drawable/table_row"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_order_time"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtViewOrderTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </TableRow>

            <LinearLayout
                android:id="@+id/layLinearGoods"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/table_row"
                android:layout_margin="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/label_goods"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/txtViewMore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:padding="3dp"
                        android:textSize="16sp"
                        android:textColor="@color/primary_dark_material_light"
                        android:text="@string/label_expand"/>
                </RelativeLayout>

                <GridView
                    android:id="@+id/gridViewGoods"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fff"
                    android:numColumns="3"/>
            </LinearLayout>
        </TableLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>