<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_margin="2dp"
              android:padding="2dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edTxtSubAddress1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:lines="1"
            android:hint="@string/hit_address1"/>

        <EditText
            android:id="@+id/edTxtSubAddress2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:lines="1"
            android:hint="@string/hit_address2"/>

        <EditText
            android:id="@+id/edTxtSubAddress3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:lines="1"
            android:hint="@string/hit_address3"/>

        <Spinner
            android:id="@+id/spnnrRegion"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/imgBtnRemoveAddress"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/minus_icon"
        android:textColor="#ffffff"/>
</LinearLayout>